# pawtfolio

./: .dockerignore  .gitignore  ARCHITECTURE.md  Caddyfile  Dockerfile.web  README.md  pubspec.yaml
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/pawtfolio/: MainActivity.kt
backend/: .env.example  .railwayignore  Dockerfile  main.py  pawtfolio_agent.py  pawtfolio_tools.py  pyproject.toml  run.sh
backend/data/: ella_expenses.json
lib/: app.dart  catalog.dart  conversation.dart  home_page.dart  main.dart  theme.dart
lib/catalog/: bar_chart.dart  budget_meter.dart  donut_chart.dart  expense_list.dart  insight_alert.dart  stat_card.dart
lib/transport/: a2ui_operations_adapter.dart  ag_ui_config.dart  ag_ui_transport.dart  ids.dart  platform_http_client.dart  platform_http_client_stub.dart  platform_http_client_web.dart
lib/widgets/: confetti_overlay.dart  pet_avatar.dart  widgets.dart
test/: widget_test.dart
web/: index.html  manifest.json
