[project]
name = "pawtfolio-backend"
version = "0.1.0"
description = "Pawtfolio A2UI agent backend (ADK + ag-ui-adk). Featherless/Qwen by default, Gemini via A2UI_MODEL."
requires-python = ">=3.10,<3.15"
dependencies = [
    "ag-ui-adk>=0.7.0",
    "google-adk>=1.28.1,<3.0.0",
    # google-adk's LiteLlm wrapper needs the litellm package; it routes the ADK
    # agent to any OpenAI-compatible provider (here: Featherless).
    "litellm>=1.0.0",
    "fastapi>=0.115.2",
    "uvicorn[standard]>=0.24.0",
]

# Not a package — uv just manages the venv; `uv run` executes main.py with the
# project dir on the path so the two local modules import directly.
[tool.uv]
package = false
